@@ -54,6 +54,7 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 
 /**
  * {@link AbstractFolder} - An abstract folder.
@@ -111,15 +112,19 @@ public abstract class AbstractFolder implements Folder, Serializable {
     protected boolean deefault;
 
     protected int defaultType;
-    
+
+    protected Set<String> supportedCapabilities;
+
     protected Map<String, Object> meta = new HashMap<String, Object>();
 
-    
+
+    @Override
     public Map<String, Object> getMeta() {
         return meta;
     }
 
-    
+
+    @Override
     public void setMeta(Map<String, Object> meta) {
         this.meta = meta;
     }
@@ -430,6 +435,16 @@ public abstract class AbstractFolder implements Folder, Serializable {
     @Override
     public void setBits(final int bits) {
         this.bits = bits;
+    }
+
+    @Override
+    public Set<String> getSupportedCapabilities() {
+        return supportedCapabilities;
+    }
+
+    @Override
+    public void setSupportedCapabilities(Set<String> capabilities) {
+        this.supportedCapabilities = capabilities;
     }
 
 }
